# ts_eas

./: .gitignore  .mypy.ini  .ts_pre_commit_config.yaml  Jenkinsfile  Jenkinsfile.conda  README.md  README.rst  SConstruct  pyproject.toml  setup.py
conda/: meta.yaml
doc/: conf.py  documenteer.toml  index.rst  manifest.yaml  version_history.rst
doc/lsst.ts.EAS/: index.rst
doc/news/: DM-50351.feature.txt  DM-50624.feature.txt  DM-50624.removal.txt  DM-50705.feature.rst  DM-51013.feature.rst  OSW-1067.feature.rst  OSW-1146.feature.rst  OSW-1147.feature.rst  OSW-1283.feature.rst  OSW-1372.feature.rst  OSW-1391.feature.rst  OSW-1405.feature.rst  OSW-1409.bugfix.rst  OSW-1453.bugfix.rst  OSW-1488.feature.rst  OSW-1496.feature.rst  OSW-1558.feature.1.rst  OSW-1558.feature.rst  OSW-1563.bugfix.rst  OSW-1629.bugfix.rst  OSW-1772.feature.rst  OSW-1780.bugfix.rst  OSW-1906.bugfix.1.rst  OSW-1906.bugfix.2.rst  OSW-1906.bugfix.rst  OSW-1999.feature.rst  OSW-2022.feature.rst  OSW-2054.bugfix.rst  OSW-2054.feature.1.rst  OSW-2085.feature.rst  OSW-2128.bugfix.rst  OSW-656.feature.rst  OSW-752.bugfix.rst  OSW-752.feature.rst  OSW-820.feature.rst  OSW-878.bugfix.rst  OSW-878.feature.rst  (+1 more)
schema/: eas.yaml
tests/: air_flow.ecsv  empty.ecsv  high_wind.ecsv  stale_wind_data.ecsv  sunrise_2025_isot.txt  test_cmdwrapper.py  test_delay_controller.py  test_diurnal_timer.py  test_dome.py  test_eas_csc.py  test_glass_temperature.py  test_hvac.py  test_m1m3ts.py  test_tma.py  test_weather_model.py  test_weatherforecast_model.py  twilight_2025_isot.txt
ups/: ts_eas.table
(+27 files in other folders)
